# mycdcatalog

./: AUTHORS  ChangeLog  FullClean.cmd  INSTALL  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.in  configure.in.in  makeall  mycdcatalog.doxygen  mycdcatalog.kdevprj  mycdcatalog.kdevses  mycdcatalog.lsm  mycdcatalog.spec  mycdcatalog.xpm  subdirs
admin/: mkinstalldirs
doc/: Makefile.am  Makefile.in
doc/api/: Makefile.am  Makefile.in
doc/api/html/: Makefile.am  Makefile.in  SResView_8ui_8h-source.html  acconfig_8h-source.html  annotated.html  cdreader_8h-source.html  cfg_8h-source.html  cfgmanager_8h-source.html  classCDReader-members.html  classCDReader.html  classFileHandler-members.html  classFileHandler.html  classFileHandlerFactory-members.html  classFileHandlerFactory.html  classMP3APIC-members.html  classMP3APIC.html  classMP3GEOB-members.html  classMP3GEOB.html  classMP3Handler-members.html  classMP3Handler.html  classMP3Lyrics-members.html  classMP3Lyrics.html  classMP3POPM-members.html  classMP3POPM.html  classMP3__Header-members.html  classMP3__Header.html  classMP3__ID3-members.html  classMP3__ID3.html  classPDFHandler-members.html  classPDFHandler.html  classSession-members.html  classSession.html  classShowError-members.html  classShowError.html  classTraverser-members.html  classTraverser.html  classWaitThread-members.html  classWaitThread.html  classes.html  closer_8h-source.html  (+35 more)
doc/en/: Makefile.am  Makefile.in  index.cache.bz2  index.docbook
doc/en/HTML/: commands.html  compilation.html  configuration.html  credits.html  developers.html  faq.html  index.html  installation.html  introduction.html  re-1007-unmanagechildren-1.html  requirements.html  using-mycdcatalog.html
mycdcatalog/: Makefile.am  Makefile.in  SInitForm.cpp  SInitForm.h  SInitForm.ui  SResView.cpp  SResView.h  SResView.ui  SResView.ui.h  cdreader.cpp  cdreader.h  cfg.cpp  cfg.h  cfgmanager.cpp  cfgmanager.h  closer.cpp  closer.h  compil  delete.sql  directory.cpp  directory.h  dirfile.cpp  dirfile.h  drop.sql  file.cpp  file.h  filehandler.cpp  filehandler.h  filehandlerfactory.cpp  filehandlerfactory.h  filetype.cpp  filetype.h  initform.cpp  initform.h  initializer.cpp  initializer.h  main.cpp  mounter.cpp  mounter.h  mp3_header.cpp  (+38 more)
mycdcatalog/filetype/: LEGAL.NOTICE  Localstuff  MAINT  Makefile.am  Makefile.in  Makefile.std  README  apprentice.c  ascmagic.c  config.h  config.status  configure  configure.in  file.c  file.h  file.man  is_tar.c  magic  magic.man  magic2mime  names.h  patchlevel.h  print.c  softmagic.c  tar.h
php/: directory.php  files.php  mp3file.php  mp3file_old.php  mp3handler.inc.php  mycdcatalog.inc.php  mycdcatalog.webprj  mysql_image.php  mysql_table.php  search.php  style.css  types_extensions.inc.php  types_extensions.php  volume.php  volume_rootdir.php
po/: Makefile.in
