dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(mycdcatalog, 0.3) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3)
AC_PATH_KDE
#MIN_CONFIG(3)

dnl PACKAGE set before
AC_SUBST(SUBDIRS)

#Stuff for compile file in library: libfiletype.a
AC_CHECK_FUNCS(mmap strerror strtoul)

dnl Checks for headers
AC_HEADER_STDC
AC_HEADER_MAJOR
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(locale.h)
AC_CHECK_HEADERS(sys/mman.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_RDEV

dnl Checking MySQL libraries
AC_LANG_CPLUSPLUS
#LDFLAGS = -L@libdir@/mysql -L@libdir@/mysql++
#AC_SUBST(LDFLAGS)

#AC_CHECK_LIB(sqlplus, MysqlConnection)

#AC_CHECK_LIB(mysqlclient, mysql_init,
#[INCLUDES = $(all_includes) `mysql_config --cflags`],
#AC_MSG_ERROR([BAD! libmysqlclient is needed]),
#)

#AC_CHECK_LIB(mysqlclient, mysql_init)

#AC_TRY_LINK (
#/usr/include/mysql/mysql.h,
#int main() {mysql_init();},
#[echo FOUND],
#[echo NOT FOUND]
#)

AC_CHECK_PROG(MYSQLCONFIG,mysql_config,yes,no)

if test "x$MYSQLCONFIG" = xyes; then
  echo "INCLUDES: $all_includes"
  echo "LIBS: $LIBS"

  all_includes="$all_includes `mysql_config --cflags`"
  LIBS="$LIBS `mysql_config --libs`"

  echo "new INCLUDES: $all_includes"
  echo "new LIBS: $LIBS"
else
  echo "MYSQLCONFIG = $MYSQLCONFIG"
  echo "Error: we need mysql_config"
  exit 1
fi
KDE_CREATE_SUBDIRSLIST
AC_OUTPUT( \
./Makefile \
doc/Makefile \
doc/api/Makefile \
doc/api/html/Makefile \
doc/en/Makefile \
mycdcatalog/Makefile \
mycdcatalog/filetype/Makefile \
po/Makefile \
)
