####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libfiletype.a

INCLUDES = $(all_includes)

libfiletype_a_METASOURCES = AUTO

libfiletype_a_SOURCES = file.c print.c softmagic.c is_tar.c ascmagic.c apprentice.c 


EXTRA_DIST = LEGAL.NOTICE Makefile.am README apprentice.c ascmagic.c config.h.in configure.in file.h install-sh is_tar.c missing mkinstalldirs names.h softmagic.c stamp-h.in tar.h print.c magic file.c config.h 

####### kdevelop will overwrite this part!!! (end)############
